Adds filter and subscription